Add minimize bootstrap

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
 			<li><a href="#contact">Contact</a></li>
 			<li>
 				<a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank">
-					<img src="assets/images/instagram.webp" alt="logo instagram">
+					<img src="assets/images/instagram.webp" alt="logo instagram" width="20" height="20">
 				</a>
 			</li>
 		</ul>
@@ -58,7 +58,7 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina-thumbnail.webp" alt="portrait Nina Carducci">
+		<img src="./assets/images/nina-thumbnail.webp" width="560" height="559" alt="portrait Nina Carducci">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -151,7 +151,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera-thumbnail.webp" alt="design image camera">
+			<img src="./assets/images/camera-thumbnail.webp" width="420" height="420" alt="design image camera">
 		</div>
 	</div>
 </div>
