Add meta open graph for social network

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
+	<meta name="description" content="Nina Carducci - Photographe professionnel">
 	<title>Nina Carducci - Photographe professionnel</title>
+
+	<meta property="og:title" content="Nina Carducci - Artiste Photographe">
+	<meta property="og:description" content="">
+	<meta property="og:image" content="https://raw.githubusercontent.com/Orivoir/nina-carducci.github.io/refs/heads/master/assets/images/nina-thumbnail.webp">
+
 </head>
 <body>
 <div class="top-header">
