fix meta open graph

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<title>Nina Carducci - Photographe professionnel</title>
 
 	<meta property="og:title" content="Nina Carducci - Artiste Photographe">
-	<meta property="og:description" content="">
+	<meta property="og:description" content="Devenir photographe était pour moi une évidence. Comme si j'y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels...">
 	<meta property="og:image" content="https://raw.githubusercontent.com/Orivoir/nina-carducci.github.io/refs/heads/master/assets/images/nina-thumbnail.webp">
 
 </head>
